More or less operational now

--- a/note/deploy/docs.ipynb
+++ b/note/deploy/docs.ipynb
@@ -55,13 +55,10 @@
    },
    "outputs": [],
    "source": [
-    "name = dummynator\n",
+    "name = \"dummynator\"\n",
     "\n",
     "root_dir = dirname(dirname(os.getcwd()))\n",
-    "docs_dir = os.path.join(root_dir, 'docs')\n",
-    "\n",
-    "fn_conda_dep = 'dependencies-deploy.yaml'\n",
-    "fn_conda_dev = 'dependencies-develop.yaml'"
+    "docs_dir = os.path.join(root_dir, 'docs')"
    ]
   },
   {
@@ -105,12 +102,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[NbConvertApp] Converting notebook hello_world.ipynb to markdown\n",
+      "[NbConvertApp] Writing 163 bytes to /cw/dtaijupiter/NoCsBack/dtai/elia/dummynator/docs/hello_world.md\n",
       "[NbConvertApp] Converting notebook quickstart.ipynb to markdown\n",
-      "[NbConvertApp] Support files will be in quickstart_files/\n",
-      "[NbConvertApp] Making directory /cw/dtaijupiter/NoCsBack/dtai/elia/mercs/docs/quickstart_files\n",
-      "[NbConvertApp] Making directory /cw/dtaijupiter/NoCsBack/dtai/elia/mercs/docs/quickstart_files\n",
-      "[NbConvertApp] Making directory /cw/dtaijupiter/NoCsBack/dtai/elia/mercs/docs/quickstart_files\n",
-      "[NbConvertApp] Writing 17957 bytes to /cw/dtaijupiter/NoCsBack/dtai/elia/mercs/docs/quickstart.md\n"
+      "[NbConvertApp] Writing 3080 bytes to /cw/dtaijupiter/NoCsBack/dtai/elia/dummynator/docs/quickstart.md\n"
      ]
     }
    ],
@@ -161,7 +156,7 @@
      "output_type": "stream",
      "text": [
       "INFO    -  Cleaning site directory \n",
-      "INFO    -  Building documentation to directory: /cw/dtaijupiter/NoCsBack/dtai/elia/mercs/site \n"
+      "INFO    -  Building documentation to directory: /cw/dtaijupiter/NoCsBack/dtai/elia/dummynator/site \n"
      ]
     }
    ],
@@ -234,9 +229,10 @@
      "output_type": "stream",
      "text": [
       "INFO    -  Cleaning site directory \n",
-      "INFO    -  Building documentation to directory: /cw/dtaijupiter/NoCsBack/dtai/elia/mercs/site \n",
-      "INFO    -  Copying '/cw/dtaijupiter/NoCsBack/dtai/elia/mercs/site' to 'gh-pages' branch and pushing to GitHub. \n",
-      "INFO    -  Your documentation should shortly be available at: https://eliavw.github.io/mercs/ \n"
+      "INFO    -  Building documentation to directory: /cw/dtaijupiter/NoCsBack/dtai/elia/dummynator/site \n",
+      "WARNING -  Version check skipped: No version specificed in previous deployment. \n",
+      "INFO    -  Copying '/cw/dtaijupiter/NoCsBack/dtai/elia/dummynator/site' to 'gh-pages' branch and pushing to GitHub. \n",
+      "INFO    -  Your documentation should shortly be available at: https://eliavw.github.io/dummynator/ \n"
      ]
     }
    ],
@@ -256,7 +252,7 @@
     "Collapsed": "false"
    },
    "source": [
-    "and your site should be online at; [https://eliavw.github.com/dummynator](https://eliavw.github.com/dummynator)\n",
+    "and your site should be online at; [https://eliavw.github.io/dummynator](https://eliavw.github.io/dummynator)\n",
     "\n",
     "What happens under the hood is that a `mkdocs build` is executed, and then the resulting `site` directory is pushed to the `gh pages` branch in your repository. From that point on, github takes care of the rest.\n"
    ]
